--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
+    "multer": "^1.4.5-lts.1",
     "node-sass": "^9.0.0",
     "nodemon": "^2.0.22"
   }
