--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
+    "html-docx-js": "^0.3.1",
+    "html-to-docx": "^1.8.0",
     "jsonwebtoken": "^9.0.0",
+    "juice": "^9.0.0",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
+    "node-easy-docx": "^0.1.3",
     "node-sass": "^9.0.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pdf-parse": "^1.1.1",
+    "pdf2html": "^3.1.0",
+    "word-extractor": "^1.0.4"
   }
 }
